[package]
name = "main_thread"
version = "0.1.0"
authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
edition = "2021"
keywords = ["thread", "main"]
categories = ["concurrency", "no-std", "no-std::no-alloc"]
description = "One function cross platform library that returns true if the current thread is the main thread."
license = "Apache-2.0"
rust-version = "1.63.0"
readme = "README.md"
repository = "https://github.com/AlexanderSchuetz97/main_thread"


[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "^0.3.9", features = ["processthreadsapi", "minwindef", "tlhelp32", "handleapi", "winnt", "errhandlingapi", "winerror"]}
defer-heavy = { version = "^0.1.0", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd", target_os = "macos"))'.dependencies]
libc = "^0.2.180"

[target.'cfg(target_os = "ios")'.dependencies]
objc2-foundation = {version = "^0.3.2"}